--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ Upon initilization, needs to create a .conf in /etc/systemd that runs python scr
 Needs to scrape top three 'images of the day' from /r/Earthporn.
 
 After scraping, needs to alternate between images every increment of time indicated by user upon setup.
+
+
+Eventual: add a list of links to the urls where the images were posted.
