--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,7 @@ Needs to scrape top three 'images of the day' from /r/Earthporn.
 
 After scraping, needs to alternate between images every increment of time indicated by user upon setup. (randomly)
 
+Create README, give some credit to mtrovo for the background changer script. https://gist.github.com/mtrovo/1110370
+
 
 Eventual: add a list of links to the urls where the images were posted.
